--- a/five.html
+++ b/five.html
@@ -15,9 +15,23 @@
 
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="five.html">THE YACHT</a></li>
+			<li>/</li> 
+  <li><a href="charter.html">CHARTER PACKAGES</a></li>
+  <li>/</li>
+  <li><a href="testimonials.html">TESTIMONIALS</a></li>
+  <li>/</li>
+  <li><a href="contact.html">CONTACT</a></li>
+  <li><a href="blog.html">BLOG</a></li>
+		</ul>
+	</nav>
 <div class="jumbotron">
   <div class="container">
-    ...
+  	<div id="title">
+    <h1>A First-Class Ticket to the Italian Coast</h1>
+</div>
   </div>
 </div>
 </body>
